--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^5.3.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-multi-carousel": "^2.8.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
     "zustand": "^5.0.6"
   },
